--- a/index.html
+++ b/index.html
@@ -1,163 +1,174 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Просмотр карт</title>
+  <meta charset="UTF-8">
+  <title>Map Viewer</title>
   <style>
-    html, body {
-      margin: 0; height: 100%; overflow: hidden;
-      font-family: system-ui, sans-serif;
-      background: #000;
-      color: #fff;
+    body {
+      margin: 0;
+      overflow: hidden;
+      background: #222;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
     }
     #viewer {
-      width: 100%; height: 100%;
-      display: flex; align-items: center; justify-content: center;
-      background: #111;
-      overflow: hidden;
       position: relative;
+      overflow: hidden;
+      flex: 1;
+      width: 100%;
+      height: 100%;
+      touch-action: none;
     }
-    #viewer img {
-      max-width: 100%; max-height: 100%;
+    #map {
       transform-origin: center center;
-      transition: transform 0.1s ease-out;
+      transition: transform 0.05s linear;
       position: absolute;
-      left: 50%;
       top: 50%;
+      left: 50%;
       transform: translate(-50%, -50%);
     }
-    .controls {
-      position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%);
-      display: flex; gap: 10px;
-      z-index: 10;
+    .icon {
+      position: absolute;
+      width: 40px;
+      height: 40px;
+      transform: translate(-50%, -50%);
+      pointer-events: none;
     }
-    .controls button {
-      background: rgba(0, 0, 0, 0.945);
-      border: 3px solid #c90e0e;
-      color: #ffffff;
-      padding: 8px 12px;
+    .buttons {
+      display: flex;
+      gap: 10px;
+      margin: 10px;
+      z-index: 100;
+    }
+    .buttons button {
+      padding: 8px 14px;
+      font-size: 14px;
       border-radius: 8px;
-      cursor: pointer;
+      border: none;
+      background: #444;
+      color: white;
     }
-    .controls button:hover { background: rgb(46, 95, 150); }
   </style>
 </head>
 <body>
-  <div id="viewer">
-    <img id="map" src="./image/map1.png" alt="Карта" />
+  <div class="buttons">
+    <button onclick="switchMap(0)">Карта 1</button>
+    <button onclick="switchMap(1)">Карта 2</button>
+    <button onclick="switchMap(2)">Карта 3</button>
+    <button onclick="switchMap(3)">Карта 4</button>
   </div>
-  <div class="controls">
-    <button onclick="showImage(1)">Этаж 1</button>
-    <button onclick="showImage(2)">Этаж 2</button>
-    <button onclick="showImage(3)">Этаж 3</button>
-    <button onclick="showImage(4)">Парк</button>
+  <div id="viewer">
+    <img id="map" src="images/map1.png" alt="map">
   </div>
 
   <script>
-    const map = document.getElementById('map');
-    let scale = 1;
-    let rotation = 0;
-    let offsetX = 0;
-    let offsetY = 0;
+    const maps = [
+      { src: "images/map1.png", icons: [ {x:100,y:100,enabled:true}, {x:200,y:200,enabled:false}, {x:0,y:0,enabled:false} ] },
+      { src: "images/map2.png", icons: [ {x:150,y:150,enabled:true}, {x:250,y:250,enabled:true} ] },
+      { src: "images/map3.png", icons: [ {x:180,y:120,enabled:true} ] },
+      { src: "images/map4.png", icons: [ {x:0,y:0,enabled:false} ] }
+    ];
+    const mapImg = document.getElementById("map");
+    const viewer = document.getElementById("viewer");
+    let currentMap = 0;
+    let scale = 1, rotation = 0, posX = 0, posY = 0;
+
+    function switchMap(index) {
+      currentMap = index;
+      mapImg.src = maps[currentMap].src;
+      document.querySelectorAll(".icon").forEach(el => el.remove());
+      addIcons();
+      resetTransform();
+    }
+
+    function resetTransform() {
+      scale = 1; rotation = 0; posX = 0; posY = 0;
+      updateTransform();
+    }
 
     function updateTransform() {
-      map.style.transform = `translate(-50%, -50%) translate(${offsetX}px, ${offsetY}px) scale(${scale}) rotate(${rotation}deg)`;
+      mapImg.style.transform =
+        `translate(-50%, -50%) translate(${posX}px, ${posY}px) scale(${scale}) rotate(${rotation}deg)`;
+      updateIcons();
     }
 
-    // Масштабирование колесиком
-    document.addEventListener('wheel', e => {
-      e.preventDefault();
-      scale += e.deltaY * -0.001;
-      scale = Math.min(Math.max(.5, scale), 5);
-      updateTransform();
-    }, { passive: false });
+    function addIcons() {
+      maps[currentMap].icons.forEach((icon, i) => {
+        if (!icon.enabled || icon.x === 0 && icon.y === 0) return;
+        const el = document.createElement("img");
+        el.src = "images/icon.png"; // одна иконка для всех, можно заменить
+        el.className = "icon";
+        el.dataset.x = icon.x;
+        el.dataset.y = icon.y;
+        viewer.appendChild(el);
+      });
+    }
 
-    // Вращение клавишами
-    document.addEventListener('keydown', e => {
-      if (e.key === 'ArrowLeft') rotation -= 5;
-      if (e.key === 'ArrowRight') rotation += 5;
-      updateTransform();
-    });
+    function updateIcons() {
+      document.querySelectorAll(".icon").forEach(el => {
+        const x = parseFloat(el.dataset.x);
+        const y = parseFloat(el.dataset.y);
+        const rect = mapImg.getBoundingClientRect();
+        const cx = rect.left + rect.width / 2;
+        const cy = rect.top + rect.height / 2;
+        const dx = (x - rect.width / 2) * scale;
+        const dy = (y - rect.height / 2) * scale;
+        const angle = rotation * Math.PI / 180;
+        const rotatedX = dx * Math.cos(angle) - dy * Math.sin(angle);
+        const rotatedY = dx * Math.sin(angle) + dy * Math.cos(angle);
+        el.style.left = `${cx + rotatedX + posX}px`;
+        el.style.top = `${cy + rotatedY + posY}px`;
+        el.style.transform = `translate(-50%, -50%) scale(${scale}) rotate(${-rotation}deg)`;
+      });
+    }
 
-    // Перемещение мышью
-    let dragging = false;
-    let lastX, lastY;
-    document.addEventListener('mousedown', e => { dragging = true; lastX = e.clientX; lastY = e.clientY; });
-    document.addEventListener('mouseup', () => dragging = false);
-    document.addEventListener('mousemove', e => {
-      if (dragging) {
-        offsetX += e.clientX - lastX;
-        offsetY += e.clientY - lastY;
-        lastX = e.clientX; lastY = e.clientY;
-        constrainOffset();
-        updateTransform();
-      }
-    });
-
-    // Сенсорное управление
-    let lastTouchDist = null;
-    let lastAngle = null;
-    let lastTouchX = null;
-    let lastTouchY = null;
-
-    document.addEventListener('touchstart', e => {
-      if (e.touches.length === 1) {
-        lastTouchX = e.touches[0].clientX;
-        lastTouchY = e.touches[0].clientY;
-      }
-    });
-
-    document.addEventListener('touchmove', e => {
-      if (e.touches.length === 1) {
-        const dx = e.touches[0].clientX - lastTouchX;
-        const dy = e.touches[0].clientY - lastTouchY;
-        offsetX += dx;
-        offsetY += dy;
-        lastTouchX = e.touches[0].clientX;
-        lastTouchY = e.touches[0].clientY;
-        constrainOffset();
-        updateTransform();
-      }
+    // Жесты для телефонов
+    let lastTouchDist = null, lastTouchAngle = null, lastTouchCenter = null;
+    viewer.addEventListener("touchstart", e => {
       if (e.touches.length === 2) {
-        const dx = e.touches[0].clientX - e.touches[1].clientX;
-        const dy = e.touches[0].clientY - e.touches[1].clientY;
-        const dist = Math.hypot(dx, dy);
-        const angle = Math.atan2(dy, dx);
-
-        if (lastTouchDist) {
-          scale *= dist / lastTouchDist;
-          scale = Math.min(Math.max(.5, scale), 5);
-        }
-        if (lastAngle !== null) {
-          rotation += (angle - lastAngle) * 180 / Math.PI;
-        }
+        lastTouchDist = getTouchDist(e);
+        lastTouchAngle = getTouchAngle(e);
+        lastTouchCenter = getTouchCenter(e);
+      }
+    });
+    viewer.addEventListener("touchmove", e => {
+      e.preventDefault();
+      if (e.touches.length === 1) {
+        posX += e.touches[0].movementX || 0;
+        posY += e.touches[0].movementY || 0;
+        updateTransform();
+      } else if (e.touches.length === 2) {
+        const dist = getTouchDist(e);
+        const angle = getTouchAngle(e);
+        if (lastTouchDist) scale *= dist / lastTouchDist;
+        if (lastTouchAngle) rotation += angle - lastTouchAngle;
         lastTouchDist = dist;
-        lastAngle = angle;
+        lastTouchAngle = angle;
         updateTransform();
       }
     }, { passive: false });
 
-    document.addEventListener('touchend', () => {
-      lastTouchDist = null;
-      lastAngle = null;
-      lastTouchX = null;
-      lastTouchY = null;
-    });
-
-    function constrainOffset() {
-      offsetX = Math.max(Math.min(offsetX, 200), -200);
-      offsetY = Math.max(Math.min(offsetY, 200), -200);
+    function getTouchDist(e) {
+      const dx = e.touches[0].clientX - e.touches[1].clientX;
+      const dy = e.touches[0].clientY - e.touches[1].clientY;
+      return Math.sqrt(dx*dx + dy*dy);
+    }
+    function getTouchAngle(e) {
+      const dx = e.touches[0].clientX - e.touches[1].clientX;
+      const dy = e.touches[0].clientY - e.touches[1].clientY;
+      return Math.atan2(dy, dx) * 180 / Math.PI;
+    }
+    function getTouchCenter(e) {
+      return {
+        x: (e.touches[0].clientX + e.touches[1].clientX) / 2,
+        y: (e.touches[0].clientY + e.touches[1].clientY) / 2
+      };
     }
 
-    function showImage(n) {
-      map.src = `./image/map${n}.png`;
-      scale = 1;
-      rotation = 0;
-      offsetX = 0;
-      offsetY = 0;
-      updateTransform();
-    }
+    switchMap(0);
   </script>
 </body>
 </html>
