--- a/index.html
+++ b/index.html
@@ -2,173 +2,228 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Map Viewer</title>
+  <title>Интерактивные карты</title>
   <style>
     body {
       margin: 0;
-      overflow: hidden;
-      background: #222;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
-    }
-    #viewer {
-      position: relative;
       overflow: hidden;
-      flex: 1;
-      width: 100%;
-      height: 100%;
+      background: #333;
+      color: white;
+    }
+
+    #map-container {
+      position: relative;
+      width: 90vw;
+      height: 70vh;
+      overflow: hidden;
       touch-action: none;
     }
+
     #map {
-      transform-origin: center center;
-      transition: transform 0.05s linear;
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
+      transform-origin: center center;
+      transform: translate(-50%, -50%) scale(1) rotate(0deg);
+      max-width: none;
+      max-height: none;
     }
+
     .icon {
       position: absolute;
       width: 40px;
       height: 40px;
-      transform: translate(-50%, -50%);
-      pointer-events: none;
+      transform: translate(-50%, -50%) rotate(0deg);
+      transform-origin: center;
+      pointer-events: auto;
     }
-    .buttons {
-      display: flex;
-      gap: 10px;
-      margin: 10px;
-      z-index: 100;
+
+    #buttons {
+      margin-top: 10px;
     }
-    .buttons button {
-      padding: 8px 14px;
-      font-size: 14px;
-      border-radius: 8px;
+
+    button {
+      margin: 0 5px;
+      padding: 10px 15px;
       border: none;
-      background: #444;
+      border-radius: 8px;
+      background: #555;
       color: white;
+      font-size: 16px;
+    }
+
+    button:hover {
+      background: #777;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div class="buttons">
+  <h2>Интерактивные карты с иконками</h2>
+  <div id="map-container">
+    <img id="map" src="images/map1.png" alt="map">
+    <!-- Иконки -->
+    <img class="icon" id="icon0" src="">
+    <img class="icon" id="icon1" src="">
+    <img class="icon" id="icon2" src="">
+    <img class="icon" id="icon3" src="">
+    <img class="icon" id="icon4" src="">
+    <img class="icon" id="icon5" src="">
+    <img class="icon" id="icon6" src="">
+    <img class="icon" id="icon7" src="">
+    <img class="icon" id="icon8" src="">
+  </div>
+
+  <div id="buttons">
     <button onclick="switchMap(0)">Карта 1</button>
     <button onclick="switchMap(1)">Карта 2</button>
     <button onclick="switchMap(2)">Карта 3</button>
     <button onclick="switchMap(3)">Карта 4</button>
   </div>
-  <div id="viewer">
-    <img id="map" src="images/map1.png" alt="map">
-  </div>
 
   <script>
-    const maps = [
-      { src: "images/map1.png", icons: [ {x:100,y:100,enabled:true}, {x:200,y:200,enabled:false}, {x:0,y:0,enabled:false} ] },
-      { src: "images/map2.png", icons: [ {x:150,y:150,enabled:true}, {x:250,y:250,enabled:true} ] },
-      { src: "images/map3.png", icons: [ {x:180,y:120,enabled:true} ] },
-      { src: "images/map4.png", icons: [ {x:0,y:0,enabled:false} ] }
+    const map = document.getElementById("map");
+    const icons = Array.from(document.getElementsByClassName("icon"));
+
+    // --- Настройки иконок для каждой карты ---
+    const mapsData = [
+      {
+        src: "images/map1.png",
+        icons: [
+          {src:"images/icon1.png", x:100, y:150},
+          {src:"images/icon2.png", x:300, y:200},
+          {src:"images/icon3.png", x:500, y:350},
+          {src:"", x:0, y:0}, // пустая → не показывается
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0}
+        ]
+      },
+      {
+        src: "images/map2.png",
+        icons: [
+          {src:"images/icon1.png", x:200, y:250},
+          {src:"images/icon2.png", x:400, y:300},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0}
+        ]
+      },
+      {
+        src: "images/map3.png",
+        icons: [
+          {src:"images/icon3.png", x:250, y:200},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0}
+        ]
+      },
+      {
+        src: "images/map4.png",
+        icons: [
+          {src:"images/icon2.png", x:350, y:250},
+          {src:"images/icon3.png", x:450, y:350},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0},
+          {src:"", x:0, y:0}
+        ]
+      }
     ];
-    const mapImg = document.getElementById("map");
-    const viewer = document.getElementById("viewer");
+
     let currentMap = 0;
-    let scale = 1, rotation = 0, posX = 0, posY = 0;
+    let scale = 1, rotation = 0;
+    let startX = 0, startY = 0, translateX = 0, translateY = 0;
+    let activeTouches = [];
+
+    function updateTransform() {
+      map.style.transform = `translate(-50%, -50%) translate(${translateX}px, ${translateY}px) scale(${scale}) rotate(${rotation}deg)`;
+
+      // Обновление иконок
+      const data = mapsData[currentMap];
+      data.icons.forEach((icon, i) => {
+        if (icon.src && icon.x !== 0 && icon.y !== 0) {
+          icons[i].style.display = "block";
+          icons[i].src = icon.src;
+          icons[i].style.left = `calc(50% + ${translateX + (icon.x - map.width/2) * scale}px)`;
+          icons[i].style.top = `calc(50% + ${translateY + (icon.y - map.height/2) * scale}px)`;
+          icons[i].style.transform = `translate(-50%, -50%) scale(${scale}) rotate(${-rotation}deg)`; // иконка не крутится с картой
+        } else {
+          icons[i].style.display = "none";
+        }
+      });
+    }
 
     function switchMap(index) {
       currentMap = index;
-      mapImg.src = maps[currentMap].src;
-      document.querySelectorAll(".icon").forEach(el => el.remove());
-      addIcons();
-      resetTransform();
-    }
-
-    function resetTransform() {
-      scale = 1; rotation = 0; posX = 0; posY = 0;
+      map.src = mapsData[index].src;
+      scale = 1; rotation = 0; translateX = 0; translateY = 0;
       updateTransform();
     }
 
-    function updateTransform() {
-      mapImg.style.transform =
-        `translate(-50%, -50%) translate(${posX}px, ${posY}px) scale(${scale}) rotate(${rotation}deg)`;
-      updateIcons();
-    }
-
-    function addIcons() {
-      maps[currentMap].icons.forEach((icon, i) => {
-        if (!icon.enabled || icon.x === 0 && icon.y === 0) return;
-        const el = document.createElement("img");
-        el.src = "images/icon.png"; // одна иконка для всех, можно заменить
-        el.className = "icon";
-        el.dataset.x = icon.x;
-        el.dataset.y = icon.y;
-        viewer.appendChild(el);
-      });
-    }
-
-    function updateIcons() {
-      document.querySelectorAll(".icon").forEach(el => {
-        const x = parseFloat(el.dataset.x);
-        const y = parseFloat(el.dataset.y);
-        const rect = mapImg.getBoundingClientRect();
-        const cx = rect.left + rect.width / 2;
-        const cy = rect.top + rect.height / 2;
-        const dx = (x - rect.width / 2) * scale;
-        const dy = (y - rect.height / 2) * scale;
-        const angle = rotation * Math.PI / 180;
-        const rotatedX = dx * Math.cos(angle) - dy * Math.sin(angle);
-        const rotatedY = dx * Math.sin(angle) + dy * Math.cos(angle);
-        el.style.left = `${cx + rotatedX + posX}px`;
-        el.style.top = `${cy + rotatedY + posY}px`;
-        el.style.transform = `translate(-50%, -50%) scale(${scale}) rotate(${-rotation}deg)`;
-      });
-    }
-
-    // Жесты для телефонов
-    let lastTouchDist = null, lastTouchAngle = null, lastTouchCenter = null;
-    viewer.addEventListener("touchstart", e => {
-      if (e.touches.length === 2) {
-        lastTouchDist = getTouchDist(e);
-        lastTouchAngle = getTouchAngle(e);
-        lastTouchCenter = getTouchCenter(e);
-      }
-    });
-    viewer.addEventListener("touchmove", e => {
+    // Зум колесом мыши
+    document.getElementById("map-container").addEventListener("wheel", e => {
       e.preventDefault();
-      if (e.touches.length === 1) {
-        posX += e.touches[0].movementX || 0;
-        posY += e.touches[0].movementY || 0;
-        updateTransform();
-      } else if (e.touches.length === 2) {
-        const dist = getTouchDist(e);
-        const angle = getTouchAngle(e);
-        if (lastTouchDist) scale *= dist / lastTouchDist;
-        if (lastTouchAngle) rotation += angle - lastTouchAngle;
-        lastTouchDist = dist;
-        lastTouchAngle = angle;
-        updateTransform();
+      scale += e.deltaY * -0.001;
+      scale = Math.min(Math.max(0.5, scale), 5);
+      updateTransform();
+    });
+
+    // Сенсорные жесты
+    document.getElementById("map-container").addEventListener("touchstart", e => {
+      activeTouches = Array.from(e.touches);
+    });
+
+    document.getElementById("map-container").addEventListener("touchmove", e => {
+      if (activeTouches.length === 1 && e.touches.length === 1) {
+        translateX += e.touches[0].clientX - activeTouches[0].clientX;
+        translateY += e.touches[0].clientY - activeTouches[0].clientY;
       }
-    }, { passive: false });
+      if (activeTouches.length >= 2 && e.touches.length >= 2) {
+        const distStart = Math.hypot(
+          activeTouches[0].clientX - activeTouches[1].clientX,
+          activeTouches[0].clientY - activeTouches[1].clientY
+        );
+        const distNow = Math.hypot(
+          e.touches[0].clientX - e.touches[1].clientX,
+          e.touches[0].clientY - e.touches[1].clientY
+        );
+        scale *= distNow / distStart;
 
-    function getTouchDist(e) {
-      const dx = e.touches[0].clientX - e.touches[1].clientX;
-      const dy = e.touches[0].clientY - e.touches[1].clientY;
-      return Math.sqrt(dx*dx + dy*dy);
-    }
-    function getTouchAngle(e) {
-      const dx = e.touches[0].clientX - e.touches[1].clientX;
-      const dy = e.touches[0].clientY - e.touches[1].clientY;
-      return Math.atan2(dy, dx) * 180 / Math.PI;
-    }
-    function getTouchCenter(e) {
-      return {
-        x: (e.touches[0].clientX + e.touches[1].clientX) / 2,
-        y: (e.touches[0].clientY + e.touches[1].clientY) / 2
-      };
-    }
+        const angleStart = Math.atan2(
+          activeTouches[1].clientY - activeTouches[0].clientY,
+          activeTouches[1].clientX - activeTouches[0].clientX
+        );
+        const angleNow = Math.atan2(
+          e.touches[1].clientY - e.touches[0].clientY,
+          e.touches[1].clientX - e.touches[0].clientX
+        );
+        rotation += (angleNow - angleStart) * 180 / Math.PI;
+      }
+      activeTouches = Array.from(e.touches);
+      updateTransform();
+    });
 
-    switchMap(0);
+    updateTransform();
   </script>
 </body>
 </html>
