--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
 <body>
   <h2>Интерактивные карты с иконками</h2>
   <div id="map-container">
-    <img id="map" src="images/map1.png" alt="map">
+    <img id="map" src="image/map1.png" alt="map">
     <!-- Иконки -->
-    <img class="icon" id="icon0" src="">
-    <img class="icon" id="icon1" src="">
-    <img class="icon" id="icon2" src="">
-    <img class="icon" id="icon3" src="">
-    <img class="icon" id="icon4" src="">
-    <img class="icon" id="icon5" src="">
-    <img class="icon" id="icon6" src="">
-    <img class="icon" id="icon7" src="">
-    <img class="icon" id="icon8" src="">
+    <img class="icon" id="decan" src="">
+    <img class="icon" id="lab" src="">
+    <img class="icon" id="ofice" src="">
+    <img class="icon" id="park" src="">
+    <img class="icon" id="pc" src="">
+    <img class="icon" id="piano" src="">
+    <img class="icon" id="rector" src="">
+    <img class="icon" id="sport" src="">
+    <img class="icon" id="money" src="">
   </div>
 
   <div id="buttons">
@@ -93,11 +93,11 @@
     // --- Настройки иконок для каждой карты ---
     const mapsData = [
       {
-        src: "images/map1.png",
+        src: "image/map1.png",
         icons: [
-          {src:"images/icon1.png", x:100, y:150},
-          {src:"images/icon2.png", x:300, y:200},
-          {src:"images/icon3.png", x:500, y:350},
+          {src:"image/icon1.png", x:100, y:150},
+          {src:"image/icon2.png", x:300, y:200},
+          {src:"image/icon3.png", x:500, y:350},
           {src:"", x:0, y:0}, // пустая → не показывается
           {src:"", x:0, y:0},
           {src:"", x:0, y:0},
@@ -107,10 +107,10 @@
         ]
       },
       {
-        src: "images/map2.png",
+        src: "image/map2.png",
         icons: [
-          {src:"images/icon1.png", x:200, y:250},
-          {src:"images/icon2.png", x:400, y:300},
+          {src:"image/icon1.png", x:200, y:250},
+          {src:"image/icon2.png", x:400, y:300},
           {src:"", x:0, y:0},
           {src:"", x:0, y:0},
           {src:"", x:0, y:0},
@@ -121,9 +121,9 @@
         ]
       },
       {
-        src: "images/map3.png",
+        src: "image/map3.png",
         icons: [
-          {src:"images/icon3.png", x:250, y:200},
+          {src:"image/icon3.png", x:250, y:200},
           {src:"", x:0, y:0},
           {src:"", x:0, y:0},
           {src:"", x:0, y:0},
@@ -135,10 +135,10 @@
         ]
       },
       {
-        src: "images/map4.png",
+        src: "image/map4.png",
         icons: [
-          {src:"images/icon2.png", x:350, y:250},
-          {src:"images/icon3.png", x:450, y:350},
+          {src:"image/icon2.png", x:350, y:250},
+          {src:"image/icon3.png", x:450, y:350},
           {src:"", x:0, y:0},
           {src:"", x:0, y:0},
           {src:"", x:0, y:0},
@@ -227,3 +227,4 @@
   </script>
 </body>
 </html>
+
