--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
   <div id="map-container">
     <img id="map" src="image/map1.png" alt="map">
     <!-- Иконки -->
-    <img class="icon" id="decan" src="">
-    <img class="icon" id="lab" src="">
-    <img class="icon" id="ofice" src="">
-    <img class="icon" id="park" src="">
-    <img class="icon" id="pc" src="">
-    <img class="icon" id="piano" src="">
-    <img class="icon" id="rector" src="">
-    <img class="icon" id="sport" src="">
-    <img class="icon" id="money" src="">
+    <img class="icon" id="icon0" src="">
+    <img class="icon" id="icon1" src="">
+    <img class="icon" id="icon2" src="">
+    <img class="icon" id="icon3" src="">
+    <img class="icon" id="icon4" src="">
+    <img class="icon" id="icon5" src="">
+    <img class="icon" id="icon6" src="">
+    <img class="icon" id="icon7" src="">
+    <img class="icon" id="icon8" src="">
   </div>
 
   <div id="buttons">
@@ -227,4 +227,5 @@
   </script>
 </body>
 </html>
+
 
